Elimino partículas y guardo cambios finales

--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
     <header>
         <h1>Para Mi Amor</h1>
         <p>La persona más especial del mundo</p>
-        <img src="images/portada.jpg" alt="Nosotros">
+        <img src="imagenes/WhatsApp Image 2025-03-17 at 11.27.37 PM.jpeg" alt="Nosotros">
     </header>
 
     <div class="photo-section">
         <h2>Nuestra Historia</h2>
         <div class="photo">
-            <img src="images/foto1.jpg" alt="Primer día">
-            <p>"El día que nos conocimos - 15 de marzo de 2023"</p>
+            <img src="imagenes/WhatsApp Image 2025-03-17 at 11.25.13 PM (2).jpeg" alt="Primer día">
+            <p>"El día que nos conocimos - 17 de octubre de 2024, ese dia me respondiste una nota de mi feyman, y ese mensaje cambio mi vida por que gracias a ese mensaje te conoci, pude conocer al amor de mi vida, a una niña tan dulce, tan inteligente, tan hermosa, tan noble y sobre todo unica en este mundo"</p>
         </div>
         <div class="photo">
-            <img src="images/foto2.jpg" alt="Aventura">
-            <p>"Nuestra primera aventura juntos"</p>
+            <img src="imagenes/WhatsApp Image 2025-03-17 at 11.25.13 PM (1).jpeg" alt="Aventura">
+            <p>"Nuestra primera aventura juntos, la primera aventura juntos para mi fue cuando cumplimos un mes de relación, ese dia te veias hermosa, con ese vestido blanco tan lindo, sin duda la niña mas linda de la plaza, comimos helad, escuchamos musica, nos dimos dulces y vimos tu pelicula favorita, de todos los chicos que me enamore, para mi ese dia fue hermoso."</p>
         </div>
     </div>
 
@@ -110,11 +110,14 @@
         <p>Porque tu risa ilumina mi mundo.</p>
         <p>Porque siempre sabes cómo hacerme feliz.</p>
         <p>Porque eres mi hogar.</p>
+        <p>porque tienes unos ojos que brillan como dos estrellas</p>
+        <p>porque tienes un corazon tan lindo y puro</p>
+        <p>porque eres tu</p>
     </div>
 
     <div class="photo-section">
         <button class="surprise-btn" onclick="showSurprise()">Haz clic para una sorpresa</button>
-        <div id="surprise">¡Te amo con todo mi corazón! ♥</div>
+        <div id="surprise">¡Te amo con todo mi corazón, muchas gracias por estos 3 meses de amor y de felidad, por estar simpre conmigo, por apoyarme y amarme, gracias mi pequeña princesa, espero que duremos muchos más! ♥</div>
     </div>
 
     <script>
