Ajusto tamaño de la imagen de portada

--- a/index.html
+++ b/index.html
@@ -90,8 +90,15 @@
     <header>
         <h1>Para Mi Amor</h1>
         <p>La persona más especial del mundo</p>
-        <img src="imagenes/WhatsApp Image 2025-03-17 at 11.27.37 PM.jpeg" alt="Nosotros">
+        <img src="imagenes/WhatsApp Image 2025-03-17 at 11.25.13 PM.jpeg" alt="Nosotros">
     </header>
+    .portada-img{
+        width: 80%; /* Ajusta el ancho al 80% del contenedor */
+        max-width: 250px; /* Límite máximo de 250px */
+        border-radius: 10px; /* Para que coincida con el diseño */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra opcional */
+        margin: 10px auto; /* Centrado con margen */
+    }
 
     <div class="photo-section">
         <h2>Nuestra Historia</h2>
